<resources>
    <string name="app_name">LinuxBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="press_again_to_exit">Please press again to exit application</string>
    <string name="setup">Setup</string>
    <string name="linuxbox_setup">LinuxBox Setup</string>
    <string name="features">Features</string>
    <string name="boxes">Boxes</string>
    <string name="preferences">Preferences</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="support">Support Developer</string>
    <string name="report">Report Issue</string>
    <string name="donate">Donate</string>
    <string name="watch_ads">Watch Ads</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!--<string name="ok">OK</string>-->
    <string name="support_after_donation">Thanks for purchasing the Donation Package. You can still watch video ads to support the developers, or continue using LinuxBox without advertisements.</string>
    <string name="thanks_for_support">Thanks for your support!!!</string>
    <string name="ads_removed_temp">The ads are removed for today.</string>
    <string name="no_video_ads">Currently no video ads available</string>
    <string name="ask_for_donation">Thanks you for using LinuxBox.\nWould you like to support development?\n\nWatch an ad to enjoy an ad-free experiences for one day.\n\nOr purchase a Donation Package on Google Play to permanently remove ads.</string>
    <string name="done">Done</string>
    <string name="bug_report1">Bug Report</string>
    <string name="bug_report2">Please choose an app</string>
    <string name="bug_encounter">If you encoiuntered a bug, you can report it by opening an issue on Github or contacting us by email.</string>
    <string name="setup_none">A few quick steps before creating your first Linux Box:</string>
    <string name="setup_half">Just one more step to go:</string>
    <string name="setup_ready">Everything is ready</string>
    <string name="install_termux">Install Termux</string>
    <string name="termux_installed">Termux installed</string>
    <string name="termux_notinstalled">Termux not installed, click to install from Google Play.</string>
    <string name="termux_isntinstalled">Termux isn\'t installed.</string>
    <string name="version">Version: %1$s</string>
    <string name="installed_from">Installed From: %1$s</string>
    <string name="vnc_viewer">VNC Viewer</string>
    <string name="remote_client">Remote Desktop Client</string>
    <string name="vnc_choose">Choose a VNC Viewer to download from Google Play</string>
    <string name="address_details">After setting up Linux System, connect to %1$s with a VNC Viewer to access the desktop environment.</string>
    <string name="download">Download</string>
    <string name="install">Install</string>
    <string name="choose">Choose</string>
    <string name="proprietary">Proprietary</string>
    <string name="proprietary_recommended">Proprietary (Recommended)</string>
    <string name="open_source">Open Source</string>
    <string name="googleplay_notinstalled">Google Play not installed, search on the internet instead</string>
    <string name="installed_vnc">Installed VNC Viewer: %1$s</string>
    <string name="installed">Installed</string>
    <string name="ubuntu_xfce">Ubuntu with Xfce4 Desktop</string>
    <string name="ubuntu_kde">Ubuntu with KDE Desktop</string>
    <string name="debian_xfce">Debian with Xfce4 Desktop</string>
    <string name="kali_kde">Kali with KDE Desktop</string>
    <string name="ubuntu_xfce_details">A Beginner-friendly Ubuntu system with a lightweight Xfce4 desktop environment. Easy to use while keeping resource usage low.</string>
    <string name="ubuntu_kde_details">A modern and customizable Ubuntu desktop experience with KDE Plasma. Offers a PC-like interface with more resource usage.</string>
    <string name="debian_xfce_details">A stable and reliable Debian system with the lightweight Xfce4 desktop environment. Designed for users who value simplicity and stability.</string>
    <string name="kali_kde_details">A security-focused Linux system with a lightweight KDE desktop environment. Designed for penetration testing, cybersecurity learning, and advanced users.</string>
    <string name="launch">Launch</string>
    <string name="clickhere">Termux is required to install and run Linux systems.\nLaunch Termux and paste the copied command to continue.</string>
    <string name="copy">Copy Command</string>
    <string name="clickcopycommand">Copy the command below and run it in Termux to install this Linux system.\n(First command copy may show an ad.)</string>
    <string name="clickcopycommand_adfree">Copy the command below and run it in Termux to install this Linux system.</string>
    <string name="storage_ubuntu_xfce">Minimum storage: ~3GB\nRecommended RAM: 3GB+</string>
    <string name="storage_ubuntu_kde">Minimum storage: ~5GB\nRecommended RAM: 4GB+</string>
    <string name="storage_debian_xfce">Minimum storage: ~2.5GB\nRecommended RAM: 2GB+</string>
    <string name="storage_kali_kde">Minimum storage: ~8GB\nRecommended RAM: 4GB+</string>
    <string name="please_install_termux">Termux isn\'t installed, do you want to install it now from Google Play?</string>
    <string name="cancel">Cancel</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_description">Select a distro to remove. Copy the command and run it in Termux.</string>
    <string name="clickcopycommand_uninstall">Copy the command below and run it in Termux to uninstall this Linux system.</string>
    <string name="copy_uninstall">Copy Uninstall Command</string>
    <string name="open_termux">Open Termux</string>
    <string name="about">About</string>
    <string name="source_code">Source Code</string>
    <string name="content_source_code">LinuxBox Resources</string>
    <string name="about_content">LinuxBox\nA project by EXA Lab\nVersion %1$s\n\nLinuxBox is a platform that brings Linux desktop environments to Android devices. Run distributions such as Ubuntu, Debian, and Kali Linux with a complete desktop experience, designed for learning, development, customization, and exploration.\n\nDesigned to be simple and user-friendly, LinuxBox reduces the complexity of setting up Linux environments by providing ready-to-use configurations, allowing users to focus on learning and creating instead of troubleshooting setup.</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="follow">Follow System</string>
    <string name="light">Light</string>
    <string name="Dark">Dark</string>
    <string name="email">Email</string>
    <string name="not_now">Not Now</string>
    <string name="command_copied">Command copied.\n\nThe command has been copied to your clipboard.\nPaste it into Termux to continue.</string>
    <string name="close">Close</string>
    <string name="_continue">Continue</string>
    <string name="thanks_user_for_support">Donation Package Activated\n\nThank you for supporting LinuxBox development. Your contribution helps us continue improving LinuxBox and bringing a better Linux experience to Android.</string>
</resources>