<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appearance"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme"
                        android:textSize="16sp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="sans-serif"/>

                    <RadioGroup
                        android:id="@+id/themeRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="8dp">

                        <RadioButton
                            android:id="@+id/themeSystem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/follow"
                            android:fontFamily="sans-serif"/>

                        <RadioButton
                            android:id="@+id/themeLight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/light"
                            android:fontFamily="sans-serif"/>

                        <RadioButton
                            android:id="@+id/themeDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Dark"
                            android:fontFamily="sans-serif"/>

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>